Replaced List.get(0) with List.getFirst()